cluster/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  namespace: flux-system
spec:
  type: ClusterIP
  externalTrafficPolicy: Local
  selector:
    app: weather-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
